start page copy change

--- a/app/views/leave-feedback/start.html
+++ b/app/views/leave-feedback/start.html
@@ -64,7 +64,7 @@
 
     <h2 class="govuk-heading-m">Before you start</h2>
 
-    <p class="govuk-body">If your school is currently going through an inspection, you will need the code provided.</p>
+    <p class="govuk-body">If your child's school is not currently going through an inspection, you will not be able to leave written feedback.</p>
 
     <p class="govuk-body">You will need to provide an email address.</p>
 
